--- a/activemq-artemis/values.yaml
+++ b/activemq-artemis/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: rmohr/activemq:latest
+  repository: rmohr/activemq
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
