--- a/activemq-artemis/values.yaml
+++ b/activemq-artemis/values.yaml
@@ -7,8 +7,7 @@ replicaCount: 1
 image:
   repository: rmohr/activemq
   pullPolicy: IfNotPresent
-  # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "5.15.9"
 
 imagePullSecrets: []
 nameOverride: ""
