RANDOMWALK-46: fix STOMP service and deployment

--- a/activemq-artemis/templates/deployment.yaml
+++ b/activemq-artemis/templates/deployment.yaml
@@ -42,12 +42,12 @@ spec:
               protocol: TCP
           livenessProbe:
             tcpSocket:
-              port: stomp
+              port: {{ .Values.stomp.port }}
             initialDelaySeconds: 30
             periodSeconds: 10
           readinessProbe:
             tcpSocket:
-              port: stomp
+              port: {{ .Values.stomp.port }}
             initialDelaySeconds: 30
             periodSeconds: 10
           resources:
