RANDOMWALK-46: change image, add artemis secrets and rename host-name

--- a/activemq-artemis/templates/deployment.yaml
+++ b/activemq-artemis/templates/deployment.yaml
@@ -52,6 +52,16 @@ spec:
             periodSeconds: 10
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          env:
+            {{- if .Values.secrets }}
+              {{- range .Values.secrets }}
+              - name: {{ .name }}
+                valueFrom:
+                  secretKeyRef:
+                    name: {{ .secret_name }}
+                    key: {{ .secret_key }}
+              {{- end }}
+              {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
