--- a/activemq-artemis/values.yaml
+++ b/activemq-artemis/values.yaml
@@ -2,13 +2,22 @@
 replicaCount: 1
 
 image:
-  repository: vromero/activemq-artemis
+  repository: apache/activemq-artemis
   pullPolicy: IfNotPresent
-  tag: "2.16.0"
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
+
+secrets:
+  - name: ARTEMIS_USER
+    secret_key: ARTEMIS_USER
+    secret_name: activemq-artemis-secret
+
+  - name: ARTEMIS_PASSWORD
+    secret_key: ARTEMIS_PASSWORD
+    secret_name: activemq-artemis-secret
 
 serviceAccount:
   create: true
@@ -33,7 +42,7 @@ ingress:
   className: ""
   annotations: {}
   hosts:
-    - host: chart-example.local
+    - host: activemq-artemis.local
       paths:
         - path: /
           pathType: ImplementationSpecific
