--- a/activemq-artemis/templates/deployment.yaml
+++ b/activemq-artemis/templates/deployment.yaml
@@ -34,7 +34,7 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - name: STOMP
+            - name: stomp
               containerPort: {{ .Values.service.port }}
               protocol: TCP
           livenessProbe:
