--- a/activemq-artemis/templates/service.yaml
+++ b/activemq-artemis/templates/service.yaml
@@ -8,7 +8,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: 61613
       protocol: TCP
       name: http
   selector:
