--- a/kafka/templates/deployment.yaml
+++ b/kafka/templates/deployment.yaml
@@ -34,17 +34,25 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - name: http
-              containerPort: {{ .Values.service.port }}
+            - name: kafka
+              containerPort: 9092
               protocol: TCP
           livenessProbe:
-            httpGet:
-              path: /
-              port: http
+            exec:
+              command:
+                - /bin/sh
+                - -c
+                - "/opt/kafka/bin/kafka-topics.sh --zookeeper zookeeper.zookeeper.svc.cluster.local:2181 --list"
+            initialDelaySeconds: 30
+            periodSeconds: 10
           readinessProbe:
-            httpGet:
-              path: /
-              port: http
+            exec:
+              command:
+                - /bin/sh
+                - -c
+                - "/opt/kafka/bin/kafka-topics.sh --zookeeper zookeeper.zookeeper.svc.cluster.local:2181 --list"
+            initialDelaySeconds: 5
+            periodSeconds: 10
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           env:
