--- a/zookeeper-service/templates/deployment.yaml
+++ b/zookeeper-service/templates/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "zookeeper.fullname" . }}
+  name: {{ include "zookeeper-service.fullname" . }}
   labels:
-    {{- include "zookeeper.labels" . | nindent 4 }}
+    {{- include "zookeeper-service.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "zookeeper.selectorLabels" . | nindent 6 }}
+      {{- include "zookeeper-service.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -18,13 +18,13 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "zookeeper.selectorLabels" . | nindent 8 }}
+        {{- include "zookeeper-service.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "zookeeper.serviceAccountName" . }}
+      serviceAccountName: {{ include "zookeeper-service.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
