--- a/kafka-service/templates/deployment.yaml
+++ b/kafka-service/templates/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "kafka.fullname" . }}
+  name: {{ include "kafka-service.fullname" . }}
   labels:
-    {{- include "kafka.labels" . | nindent 4 }}
+    {{- include "kafka-service.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "kafka.selectorLabels" . | nindent 6 }}
+      {{- include "kafka-service.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -18,13 +18,13 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "kafka.selectorLabels" . | nindent 8 }}
+        {{- include "kafka-service.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "kafka.serviceAccountName" . }}
+      serviceAccountName: {{ include "kafka-service.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
@@ -34,7 +34,7 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - name: kafka
+            - name: kafka-service
               containerPort: 9092
               protocol: TCP
           livenessProbe:
@@ -42,7 +42,7 @@ spec:
               command:
                 - /bin/sh
                 - -c
-                - "/usr/bin/kafka-topics --zookeeper {{ (index .Values.env 1).value }} --list"
+                - "/usr/bin/kafka-service-topics --zookeeper {{ (index .Values.env 1).value }} --list"
             initialDelaySeconds: 30
             periodSeconds: 10
             readinessProbe:
@@ -50,8 +50,8 @@ spec:
                 command:
                   - /bin/sh
                   - -c
-                  - "/usr/bin/kafka-topics --zookeeper {{ (index .Values.env 1).value }} --list"
-              initialDelaySeconds: 5
+                  - "/usr/bin/kafka-service-topics --zookeeper {{ (index .Values.env 1).value }} --list"
+              initialDelaySeconds: 30
               periodSeconds: 10
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
