--- a/kafka-service/templates/serviceaccount.yaml
+++ b/kafka-service/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "kafka.serviceAccountName" . }}
+  name: {{ include "kafka-service.serviceAccountName" . }}
   labels:
-    {{- include "kafka.labels" . | nindent 4 }}
+    {{- include "kafka-service.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
