--- a/kafka-service/values.yaml
+++ b/kafka-service/values.yaml
@@ -1,4 +1,4 @@
-# Default values for kafka.
+# Default values for kafka-service.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
@@ -11,13 +11,13 @@ image:
 
 env:
   - name: KAFKA_BROKER_ID
-    value: 1
+    value: "1"
   - name: KAFKA_ZOOKEEPER_CONNECT
-    value: zookeeper.zookeeper.svc.cluster.local:2181
+    value: zookeeper-service:2181
   - name: KAFKA_ADVERTISED_LISTENERS
-    value: PLAINTEXT://kafka.kafka.svc.cluster.local:9092
+    value: PLAINTEXT://kafka-service:9092
   - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
-    value: 1
+    value: "1"
 
 imagePullSecrets: [ ]
 nameOverride: ""
@@ -67,7 +67,7 @@ ingress:
 
 resources:
   limits:
-    cpu: 100m
+    cpu: 150m
     memory: 256Mi
   requests:
     cpu: 10m
