--- a/zookeeper-service/templates/service.yaml
+++ b/zookeeper-service/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "kafka.fullname" . }}
+  name: {{ include "zookeeper-service.fullname" . }}
   labels:
-    {{- include "kafka.labels" . | nindent 4 }}
+    {{- include "zookeeper-service.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "kafka.selectorLabels" . | nindent 4 }}
+    {{- include "zookeeper-service.selectorLabels" . | nindent 4 }}
