--- a/zookeeper-service/templates/serviceaccount.yaml
+++ b/zookeeper-service/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "zookeeper.serviceAccountName" . }}
+  name: {{ include "zookeeper-service.serviceAccountName" . }}
   labels:
-    {{- include "zookeeper.labels" . | nindent 4 }}
+    {{- include "zookeeper-service.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
