change service to NodePort

--- a/postgres/postgresql/values.yaml
+++ b/postgres/postgresql/values.yaml
@@ -709,7 +709,7 @@ primary:
   service:
     ## @param primary.service.type Kubernetes Service type
     ##
-    type: ClusterIP
+    type: NodePort
     ## @param primary.service.ports.postgresql PostgreSQL service port
     ##
     ports:
@@ -720,7 +720,7 @@ primary:
     ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
     ##
     nodePorts:
-      postgresql: ""
+      postgresql: "31527"
     ## @param primary.service.clusterIP Static clusterIP or None for headless services
     ## e.g:
     ## clusterIP: None
