--- a/postgresql/postgresql.yaml
+++ b/postgresql/postgresql.yaml
@@ -1,14 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: postgres-config
-  labels:
-    app: postgres
-data:
-  POSTGRES_DB: random_walk_postgresql
-  POSTGRES_USER: admin
-  POSTGRES_PASSWORD: password
----
 kind: PersistentVolume
 apiVersion: v1
 metadata:
@@ -60,8 +49,8 @@ spec:
           ports:
             - containerPort: 5432
           envFrom:
-            - configMapRef:
-                name: postgres-config
+            - secretRef:
+                name: postgresql-secret
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
               name: postgredb
@@ -79,6 +68,9 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - port: 5432
+    - name: postgres
+      nodePort: 32527
+      port: 5432
+      targetPort: 5432
   selector:
     app: postgres
