--- a/postgresql/postgresql.yaml
+++ b/postgresql/postgresql.yaml
@@ -41,6 +41,8 @@ spec:
           env:
             - name: POSTGRES_DB
               value: random_walk_postgres
+            - name: PGDATA
+              value: /var/lib/postgresql/data/pgdata
           volumeMounts:
             - mountPath: /var/lib/postgresql/data
               name: postgres-pv-claim
