fix promtail max file restriction

--- a/observability/promtail/values.yaml
+++ b/observability/promtail/values.yaml
@@ -79,20 +79,20 @@ configmap:
   # -- If enabled, promtail config will be created as a ConfigMap instead of a secret
   enabled: false
 
-initContainer: []
-  # # -- Specifies whether the init container for setting inotify max user instances is to be enabled
-  # - name: init
-  #   # -- Docker registry, image and tag for the init container image
-  #   image: docker.io/busybox:1.33
-  #   # -- Docker image pull policy for the init container image
-  #   imagePullPolicy: IfNotPresent
-  #   # -- The inotify max user instances to configure
-  #   command:
-  #     - sh
-  #     - -c
-  #     - sysctl -w fs.inotify.max_user_instances=128
-  #   securityContext:
-  #     privileged: true
+initContainer:
+   # -- Specifies whether the init container for setting inotify max user instances is to be enabled
+   - name: init
+     # -- Docker registry, image and tag for the init container image
+     image: docker.io/busybox:1.33
+     # -- Docker image pull policy for the init container image
+     imagePullPolicy: IfNotPresent
+     # -- The inotify max user instances to configure
+     command:
+       - sh
+       - -c
+       - sysctl -w fs.inotify.max_user_instances=65000
+     securityContext:
+       privileged: true
 
 image:
   # -- The Docker registry
