--- a/observability/promtail/values.yaml
+++ b/observability/promtail/values.yaml
@@ -423,7 +423,7 @@ config:
   # Must be reference in `config.file` to configure `clients`
   # @default -- See `values.yaml`
   clients:
-    - url: http://loki-gateway/loki/api/v1/push
+    - url: http://lgtm-loki-gateway.observability.svc.cluster.local:80/loki/api/v1/push
   # -- Configures where Promtail will save it's positions file, to resume reading after restarts.
   # Must be referenced in `config.file` to configure `positions`
   positions:
